--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <script type="module" src="/scripts/index.js"></script>
+        <script type="module" src="/js/index.js"></script>
         <noscript>
             Javascript must be enabled
         </noscript>
